--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -1,4 +1,6 @@
-bin.includes = feature.xml
+bin.includes = feature.xml,\
+               feature.properties,\
+               license.html
 category.id.muml = MechatronicUML Features
 category.members.muml = de.uni_paderborn.fujaba.core.feature, de.uni_paderborn.fujaba.muml.pim.feature, de.uni_paderborn.fujaba.muml.verification.core.feature,de.uni_paderborn.fujaba.muml.verification.uppaal.feature, de.uni_paderborn.fujaba.simulink.feature, de.uni_paderborn.fujaba.muml.model.gen.modelica.feature, de.uni_paderborn.fujaba.muml.codegen.c.feature, de.uni_paderborn.fujaba.muml.pm.feature
 category.id.utility = Utility Features
