--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -2,7 +2,7 @@ bin.includes = feature.xml,\
                feature.properties,\
                license.html
 category.id.muml = MechatronicUML Features
-category.members.muml = de.uni_paderborn.fujaba.core.feature, de.uni_paderborn.fujaba.muml.pim.feature, de.uni_paderborn.fujaba.muml.verification.core.feature,de.uni_paderborn.fujaba.muml.verification.uppaal.feature, de.uni_paderborn.fujaba.simulink.feature, de.uni_paderborn.fujaba.muml.model.gen.modelica.feature, de.uni_paderborn.fujaba.muml.codegen.c.feature, de.uni_paderborn.fujaba.muml.pm.feature
+category.members.muml = de.uni_paderborn.fujaba.core.feature, de.uni_paderborn.fujaba.muml.pim.feature, de.uni_paderborn.fujaba.muml.verification.core.feature,de.uni_paderborn.fujaba.muml.verification.uppaal.feature, de.uni_paderborn.fujaba.simulink.feature, de.uni_paderborn.fujaba.muml.model.gen.modelica.feature, de.uni_paderborn.fujaba.muml.codegen.c.feature, de.uni_paderborn.fujaba.muml.pm.feature, de.uni_paderborn.fujaba.muml.psm.feature, de.uni_paderborn.fujaba.muml.cybertron.codegen.feature
 category.id.utility = Utility Features
 category.members.utility = de.uni_paderborn.uppaal.feature, de.uni_paderborn.fujaba.muml.sdk.feature, org.eclipse.emf.ecore.improved.feature, de.uni_paderborn.fujaba.properties.feature, de.uni_paderborn.fujaba.udbm.feature, de.uni_paderborn.emf.codegen.oclfilter.feature, , de.uni_paderborn.fujaba.graphviz.feature
 category.id.thirdparty = Third Party Dependencies
