added story diagram feature to update site (category Third Party Tools)

--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -6,6 +6,6 @@ category.members.muml = de.uni_paderborn.fujaba.core.feature, de.uni_paderborn.f
 category.id.utility = Utility Features
 category.members.utility = de.uni_paderborn.uppaal.feature, de.uni_paderborn.fujaba.muml.sdk.feature, org.eclipse.emf.ecore.improved.feature, de.uni_paderborn.fujaba.properties.feature, de.uni_paderborn.fujaba.udbm.feature, de.uni_paderborn.emf.codegen.oclfilter.feature, , de.uni_paderborn.fujaba.graphviz.feature
 category.id.thirdparty = Third Party Dependencies
-category.members.thirdparty = 
+category.members.thirdparty = de.uni_paderborn.fujaba.muml.storydiagrams.feature
 category.id.examples = MechatronicUML Model Examples
 category.members.examples = de.uni_paderborn.fujaba.muml.example.coordinatingBebots.feature, de.uni_paderborn.fujaba.muml.example.blindOvertaking.feature, de.uni_paderborn.fujaba.muml.example.sectionEntry.feature
