--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -8,4 +8,4 @@ category.members.utility = de.uni_paderborn.uppaal.feature, de.uni_paderborn.fuj
 category.id.thirdparty = Third Party Dependencies
 category.members.thirdparty = de.uni_paderborn.fujaba.muml.storydiagrams.feature
 category.id.examples = MechatronicUML Model Examples
-category.members.examples = de.uni_paderborn.fujaba.muml.example.coordinatingBebots.feature, de.uni_paderborn.fujaba.muml.example.blindOvertaking.feature, de.uni_paderborn.fujaba.muml.example.sectionEntry.feature
+category.members.examples = de.uni_paderborn.fujaba.muml.example.coordinatingBebots.feature, de.uni_paderborn.fujaba.muml.example.blindOvertaking.feature, de.uni_paderborn.fujaba.muml.example.sectionEntry.feature, de.uni_paderborn.fujaba.muml.example.railcab.feature
