Adding ModelMigration to UpdateSite feature

--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -4,7 +4,7 @@ bin.includes = feature.xml,\
 category.id.muml = MechatronicUML Features
 category.members.muml = de.uni_paderborn.fujaba.core.feature, de.uni_paderborn.fujaba.muml.pim.feature, de.uni_paderborn.fujaba.muml.verification.core.feature,de.uni_paderborn.fujaba.muml.verification.uppaal.feature, de.uni_paderborn.fujaba.simulink.feature, de.uni_paderborn.fujaba.muml.model.gen.modelica.feature, de.uni_paderborn.fujaba.muml.codegen.c.feature, de.uni_paderborn.fujaba.muml.pm.feature, de.uni_paderborn.fujaba.muml.psm.feature, de.uni_paderborn.fujaba.muml.cybertron.codegen.feature,de.uni_paderborn.fujaba.muml.reconfiguration.feature
 category.id.utility = Utility Features
-category.members.utility = de.uni_paderborn.uppaal.feature, de.uni_paderborn.fujaba.muml.sdk.feature, org.eclipse.emf.ecore.improved.feature, de.uni_paderborn.fujaba.properties.feature, de.uni_paderborn.fujaba.udbm.feature, de.uni_paderborn.fujaba.graphviz.feature
+category.members.utility = de.uni_paderborn.uppaal.feature, de.uni_paderborn.fujaba.muml.sdk.feature, org.eclipse.emf.ecore.improved.feature, de.uni_paderborn.fujaba.properties.feature, emf.migration.feature, de.uni_paderborn.fujaba.udbm.feature, de.uni_paderborn.fujaba.graphviz.feature
 category.id.thirdparty = Third Party Dependencies
 category.members.thirdparty = de.uni_paderborn.fujaba.muml.storydiagrams.feature
 category.id.examples = MechatronicUML Model Examples
