--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -15,7 +15,7 @@ category.members.muml = de.uni_paderborn.fujaba.core.feature, de.uni_paderborn.f
 						de.uni_paderborn.fujaba.muml.reconfiguration.source.feature, de.uni_paderborn.fujaba.muml.reconfiguration.feature,\
 						de.uni_paderborn.fujaba.muml.ontology.feature, de.uni_paderborn.fujaba.muml.ontology.source.feature						
 category.id.utility = Utility Features
-category.members.utility = 	de.uni_paderborn.uppaal.feature, de.uni_paderborn.uppaal.feature,\
+category.members.utility = 	de.uni_paderborn.uppaal.feature, de.uni_paderborn.uppaal.source.feature,\
 							de.uni_paderborn.fujaba.muml.sdk.feature,  de.uni_paderborn.fujaba.muml.sdk.source.feature,\
 							org.eclipse.emf.ecore.improved.feature, org.eclipse.emf.ecore.improved.source.feature,\
 							de.uni_paderborn.fujaba.properties.feature, de.uni_paderborn.fujaba.properties.source.feature,\
