--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -2,10 +2,10 @@ bin.includes = feature.xml,\
                feature.properties,\
                license.html
 category.id.muml = MechatronicUML Features
-category.members.muml = de.uni_paderborn.fujaba.core.feature, de.uni_paderborn.fujaba.core.source.feature,\
-						de.uni_paderborn.fujaba.muml.pim.feature, de.uni_paderborn.fujaba.muml.pim.source.feature,\
-						de.uni_paderborn.fujaba.muml.verification.core.feature, de.uni_paderborn.fujaba.muml.verification.core.source.feature,\
-						de.uni_paderborn.fujaba.muml.verification.uppaal.feature, de.uni_paderborn.fujaba.muml.verification.uppaal.source.feature,\
+category.members.muml = de.uni_paderborn.fujaba.core.feature,\
+						de.uni_paderborn.fujaba.muml.pim.feature,\
+						de.uni_paderborn.fujaba.muml.verification.core.feature,\
+						de.uni_paderborn.fujaba.muml.verification.uppaal.feature,\
 						de.uni_paderborn.fujaba.simulink.feature, de.uni_paderborn.fujaba.simulink.source.feature,\
 						de.uni_paderborn.fujaba.muml.model.gen.modelica.feature, de.uni_paderborn.fujaba.muml.model.gen.modelica.source.feature,\
 						de.uni_paderborn.fujaba.muml.codegen.c.feature, de.uni_paderborn.fujaba.muml.codegen.c.source.feature,\
@@ -15,7 +15,7 @@ category.members.muml = de.uni_paderborn.fujaba.core.feature, de.uni_paderborn.f
 						de.uni_paderborn.fujaba.muml.reconfiguration.source.feature, de.uni_paderborn.fujaba.muml.reconfiguration.feature,\
 						de.uni_paderborn.fujaba.muml.ontology.feature, de.uni_paderborn.fujaba.muml.ontology.source.feature						
 category.id.utility = Utility Features
-category.members.utility = 	de.uni_paderborn.uppaal.feature, de.uni_paderborn.uppaal.source.feature,\
+category.members.utility = 	de.uni_paderborn.uppaal.feature,\
 							de.uni_paderborn.fujaba.muml.sdk.feature,  de.uni_paderborn.fujaba.muml.sdk.source.feature,\
 							org.eclipse.emf.ecore.improved.feature, org.eclipse.emf.ecore.improved.source.feature,\
 							de.uni_paderborn.fujaba.properties.feature, de.uni_paderborn.fujaba.properties.source.feature,\
@@ -41,3 +41,8 @@ category.members.examples = de.uni_paderborn.fujaba.muml.example.coordinatingBeb
 							de.uni_paderborn.fujaba.muml.example.blindOvertaking.feature,\
 							de.uni_paderborn.fujaba.muml.example.sectionEntry.feature,\
 							de.uni_paderborn.fujaba.muml.example.railcab.feature
+category.id.sdks = MechatronicUML Model SDKs
+category.members.sdks = de.uni_paderborn.fujaba.core.sdk.feature,\
+						de.uni_paderborn.fujaba.muml.pim.sdk.feature,\
+						de.uni_paderborn.fujaba.muml.verification.core.sdk.feature,\
+						de.uni_paderborn.fujaba.muml.verification.uppaal.sdk.feature	
