--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -6,14 +6,14 @@ category.members.muml = de.uni_paderborn.fujaba.core.feature,\
 						de.uni_paderborn.fujaba.muml.pim.feature,\
 						de.uni_paderborn.fujaba.muml.verification.core.feature,\
 						de.uni_paderborn.fujaba.muml.verification.uppaal.feature,\
-						de.uni_paderborn.fujaba.simulink.feature, de.uni_paderborn.fujaba.simulink.source.feature,\
-						de.uni_paderborn.fujaba.muml.model.gen.modelica.feature, de.uni_paderborn.fujaba.muml.model.gen.modelica.source.feature,\
-						de.uni_paderborn.fujaba.muml.codegen.c.feature, de.uni_paderborn.fujaba.muml.codegen.c.source.feature,\
-						de.uni_paderborn.fujaba.muml.pm.feature, de.uni_paderborn.fujaba.muml.pm.source.feature,\
-						de.uni_paderborn.fujaba.muml.psm.feature, de.uni_paderborn.fujaba.muml.psm.source.feature,\
-						de.uni_paderborn.fujaba.muml.cybertron.codegen.feature, de.uni_paderborn.fujaba.muml.cybertron.codegen.source.feature,\
-						de.uni_paderborn.fujaba.muml.reconfiguration.source.feature, de.uni_paderborn.fujaba.muml.reconfiguration.feature,\
-						de.uni_paderborn.fujaba.muml.ontology.feature, de.uni_paderborn.fujaba.muml.ontology.source.feature						
+						de.uni_paderborn.fujaba.simulink.feature,\
+						de.uni_paderborn.fujaba.muml.model.gen.modelica.feature,\
+						de.uni_paderborn.fujaba.muml.codegen.c.feature,\
+						de.uni_paderborn.fujaba.muml.pm.feature,\
+						de.uni_paderborn.fujaba.muml.psm.feature,\
+						de.uni_paderborn.fujaba.muml.cybertron.codegen.feature,\
+						de.uni_paderborn.fujaba.muml.reconfiguration.source.feature,\
+						de.uni_paderborn.fujaba.muml.ontology.feature					
 category.id.utility = Utility Features
 category.members.utility = 	de.uni_paderborn.uppaal.feature,\
 							de.uni_paderborn.fujaba.muml.sdk.feature,  de.uni_paderborn.fujaba.muml.sdk.source.feature,\
@@ -45,4 +45,11 @@ category.id.sdks = MechatronicUML Model SDKs
 category.members.sdks = de.uni_paderborn.fujaba.core.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.pim.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.verification.core.sdk.feature,\
-						de.uni_paderborn.fujaba.muml.verification.uppaal.sdk.feature	
+						de.uni_paderborn.fujaba.muml.verification.uppaal.sdk.feature,\
+						de.uni_paderborn.fujaba.muml.pm.sdk.feature,\
+						de.uni_paderborn.fujaba.simulink.source.feature,\
+						de.uni_paderborn.fujaba.muml.model.gen.modelica.source.feature,\
+						de.uni_paderborn.fujaba.muml.codegen.c.source.feature,\
+						de.uni_paderborn.fujaba.muml.psm.source.feature,\
+						de.uni_paderborn.fujaba.muml.reconfiguration.source.feature,\
+						de.uni_paderborn.fujaba.muml.ontology.source.feature						
