--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -12,7 +12,7 @@ category.members.muml = de.uni_paderborn.fujaba.core.feature,\
 						de.uni_paderborn.fujaba.muml.pm.feature,\
 						de.uni_paderborn.fujaba.muml.psm.feature,\
 						de.uni_paderborn.fujaba.muml.cybertron.codegen.feature,\
-						de.uni_paderborn.fujaba.muml.reconfiguration.source.feature,\
+						de.uni_paderborn.fujaba.muml.reconfiguration.feature,\
 						de.uni_paderborn.fujaba.muml.ontology.feature					
 category.id.utility = Utility Features
 category.members.utility = 	de.uni_paderborn.uppaal.feature,\
@@ -48,7 +48,7 @@ category.members.sdks = de.uni_paderborn.fujaba.core.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.verification.uppaal.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.pm.sdk.feature,\
 						de.uni_paderborn.fujaba.simulink.source.feature,\
-						de.uni_paderborn.fujaba.muml.model.gen.modelica.source.feature,\
+						de.uni_paderborn.fujaba.muml.model.gen.modelica.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.codegen.c.source.feature,\
 						de.uni_paderborn.fujaba.muml.psm.source.feature,\
 						de.uni_paderborn.fujaba.muml.reconfiguration.source.feature,\
