added PSM sdk to update site

--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -50,6 +50,6 @@ category.members.sdks = de.uni_paderborn.fujaba.core.sdk.feature,\
 						de.uni_paderborn.fujaba.simulink.source.feature,\
 						de.uni_paderborn.fujaba.muml.model.gen.modelica.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.codegen.c.source.feature,\
-						de.uni_paderborn.fujaba.muml.psm.source.feature,\
+						de.uni_paderborn.fujaba.muml.psm.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.reconfiguration.source.feature,\
 						de.uni_paderborn.fujaba.muml.ontology.source.feature						
