added Uppaal SDK Feature to update Site

--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -44,6 +44,7 @@ category.members.examples = de.uni_paderborn.fujaba.muml.example.coordinatingBeb
 category.id.sdks = MechatronicUML Model SDKs
 category.members.sdks = de.uni_paderborn.fujaba.core.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.pim.sdk.feature,\
+						de.uni_paderborn.uppaal.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.verification.core.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.verification.uppaal.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.pm.sdk.feature,\
