--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -17,9 +17,10 @@ category.members.muml = de.uni_paderborn.fujaba.core.feature,\
 category.id.utility = Utility Features
 category.members.utility = 	de.uni_paderborn.uppaal.feature,\
 							de.uni_paderborn.fujaba.muml.sdk.feature,  de.uni_paderborn.fujaba.muml.sdk.source.feature,\
-							org.eclipse.emf.ecore.improved.feature, org.eclipse.emf.ecore.improved.source.feature,\
-							de.uni_paderborn.fujaba.properties.feature, de.uni_paderborn.fujaba.properties.source.feature,\
-							de.uni_paderborn.fujaba.properties.migrator.feature, de.uni_paderborn.fujaba.properties.migrator.source.feature,\
+							org.eclipse.emf.ecore.improved.feature,\
+							de.uni_paderborn.fujaba.properties.feature,\
+							de.uni_paderborn.fujaba.properties.migrator.feature,\
+							de.uni_paderborn.fujaba.ape.sdk.feature,\
 							de.uni_paderborn.fujaba.ecore.migration.feature, de.uni_paderborn.fujaba.ecore.migration.source.feature,\
 							de.uni_paderborn.fujaba.udbm.feature, de.uni_paderborn.fujaba.udbm.source.feature,\
 							de.uni_paderborn.fujaba.graphviz.feature, de.uni_paderborn.fujaba.graphviz.source.feature,\
