added epl license file to binary build

--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -1,6 +1,7 @@
 bin.includes = feature.xml,\
                feature.properties,\
-               license.html
+               license.html,\
+               epl-v10.html
 category.id.muml = MechatronicUML Features
 category.members.muml = de.uni_paderborn.fujaba.core.feature,\
 						de.uni_paderborn.fujaba.muml.pim.feature,\
