--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -39,10 +39,23 @@ category.members.thirdparty = 	de.uni_paderborn.fujaba.muml.storydiagrams.featur
 								de.uni_paderborn.fujaba.muml.ontology.ext.dependency.owlapi.feature,\
 								de.uni_paderborn.fujaba.muml.ontology.ext.dependency.unitontology.feature
 category.id.examples = MechatronicUML Model Examples
-category.members.examples = de.uni_paderborn.fujaba.muml.example.coordinatingBebots.feature,\
-							de.uni_paderborn.fujaba.muml.example.blindOvertaking.feature,\
+category.members.examples = de.uni_paderborn.fujaba.muml.example.blindOvertaking.feature,\
+							de.uni_paderborn.fujaba.muml.example.coordinatingBebots.feature,\
+							de.uni_paderborn.fujaba.muml.example.mini.entryexit.feature,\
+							de.uni_paderborn.fujaba.muml.example.mini.messages.feature,\
+							de.uni_paderborn.fujaba.muml.example.mini.operations.feature,\
+							de.uni_paderborn.fujaba.muml.example.mini.simpleRTSC.feature,\
+							de.uni_paderborn.fujaba.muml.example.mini.syncChannel.feature,\
+							de.uni_paderborn.fujaba.muml.example.railcab.feature,\
 							de.uni_paderborn.fujaba.muml.example.sectionEntry.feature,\
-							de.uni_paderborn.fujaba.muml.example.railcab.feature
+							org.muml.example.BrakeByWire.feature,\
+							org.muml.example.arduinoCarHwPlatform.feature,\
+							org.muml.example.mini.syncSelectorChannel.feature,\
+							de.uni_paderborn.fujaba.muml.coordinationpatternlib.feature,\
+							org.muml.example.rocketLauncher.feature,\
+							org.muml.example.CooperatingBallPlayingRobots.feature,\
+							org.muml.example.blinkingLED.feature
+							
 category.id.sdks = MechatronicUML Model SDKs
 category.members.sdks = de.uni_paderborn.fujaba.core.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.pim.sdk.feature,\
