--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -19,10 +19,10 @@ category.id.utility = Utility Features
 category.members.utility = 	de.uni_paderborn.uppaal.feature,\
 							de.uni_paderborn.fujaba.muml.sdk.feature,  de.uni_paderborn.fujaba.muml.sdk.source.feature,\
 							org.eclipse.emf.ecore.improved.feature,\
-							de.uni_paderborn.fujaba.properties.feature,\
-							de.uni_paderborn.fujaba.properties.migrator.feature,\
+							org.muml.ape.feature,\
+							org.muml.ape.migrator.feature,\
 							de.uni_paderborn.fujaba.ape.sdk.feature,\
-							de.uni_paderborn.fujaba.ecore.migration.feature, de.uni_paderborn.fujaba.ecore.migration.source.feature,\
+							org.muml.emm.feature, org.muml.emm.source.feature,\
 							de.uni_paderborn.fujaba.udbm.feature, de.uni_paderborn.fujaba.udbm.source.feature,\
 							de.uni_paderborn.fujaba.graphviz.feature, de.uni_paderborn.fujaba.graphviz.source.feature,\
 							de.uni_paderborn.fujaba.modelcopy.feature, de.uni_paderborn.fujaba.modelcopy.source.feature 
