--- a/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
+++ b/de.uni_paderborn.fujaba.muml.releng.site.feature/build.properties
@@ -4,7 +4,7 @@ bin.includes = feature.xml,\
                epl-v10.html
 category.id.muml = MechatronicUML Features
 category.members.muml = de.uni_paderborn.fujaba.core.feature,\
-						de.uni_paderborn.fujaba.muml.pim.feature,\
+						org.muml.pim.feature,\
 						de.uni_paderborn.fujaba.muml.verification.core.feature,\
 						de.uni_paderborn.fujaba.muml.verification.uppaal.feature,\
 						de.uni_paderborn.fujaba.simulink.feature,\
@@ -57,7 +57,7 @@ category.members.examples = de.uni_paderborn.fujaba.muml.example.blindOvertaking
 							org.muml.example.blinkingLED.feature
 							
 category.id.sdks = MechatronicUML Model SDKs
-category.members.sdks = de.uni_paderborn.fujaba.core.sdk.feature,\
+category.members.sdks = org.muml.core.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.pim.sdk.feature,\
 						de.uni_paderborn.uppaal.sdk.feature,\
 						de.uni_paderborn.fujaba.muml.verification.core.sdk.feature,\
