reanmed target platform and update site feature

--- a/org.muml.targetPlatformBuild/.project
+++ b/org.muml.targetPlatformBuild/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.uni_paderborn.fujaba.targetPlatformBuild</name>
+	<name>org.muml.targetPlatformBuild</name>
 	<comment></comment>
 	<projects>
 	</projects>
