fixed updatesite categories

--- a/org.muml.releng.site.feature/build.properties
+++ b/org.muml.releng.site.feature/build.properties
@@ -3,69 +3,69 @@ bin.includes = feature.xml,\
                license.html,\
                epl-v10.html
 category.id.muml = MechatronicUML Features
-category.members.muml = de.uni_paderborn.fujaba.core.feature,\
+category.members.muml = orgmuml.core.feature,\
 						org.muml.pim.feature,\
-						de.uni_paderborn.fujaba.muml.verification.core.feature,\
-						de.uni_paderborn.fujaba.muml.verification.uppaal.feature,\
-						de.uni_paderborn.fujaba.simulink.feature,\
-						de.uni_paderborn.fujaba.muml.model.gen.modelica.feature,\
-						de.uni_paderborn.fujaba.muml.codegen.c.feature,\
-						de.uni_paderborn.fujaba.muml.pm.feature,\
-						de.uni_paderborn.fujaba.muml.psm.feature,\
-						de.uni_paderborn.fujaba.muml.cybertron.codegen.feature,\
-						de.uni_paderborn.fujaba.muml.reconfiguration.feature,\
-						de.uni_paderborn.fujaba.muml.ontology.feature					
+						orm.muml.verification.core.feature,\
+						org.muml.uppaal.adapter.feature,\
+						org.muml.modelica.adapter.feature,\
+						org.muml.codegen.c.feature,\
+						org.muml.pm.feature,\
+						org.muml.psm.feature,\
+						org.muml.reconfiguration.feature,\
+						org.muml.ontology.feature					
 category.id.utility = Utility Features
-category.members.utility = 	de.uni_paderborn.uppaal.feature,\
-							de.uni_paderborn.fujaba.muml.sdk.feature,  de.uni_paderborn.fujaba.muml.sdk.source.feature,\
+category.members.utility = 	org.muml.uppaal.feature,\
 							org.eclipse.emf.ecore.improved.feature,\
 							org.muml.ape.feature,\
 							org.muml.ape.migrator.feature,\
-							de.uni_paderborn.fujaba.ape.sdk.feature,\
+							org.muml.ape.sdk.feature,\
 							org.muml.emm.feature, org.muml.emm.source.feature,\
-							de.uni_paderborn.fujaba.udbm.feature, de.uni_paderborn.fujaba.udbm.source.feature,\
-							de.uni_paderborn.fujaba.graphviz.feature, de.uni_paderborn.fujaba.graphviz.source.feature,\
-							de.uni_paderborn.fujaba.modelcopy.feature, de.uni_paderborn.fujaba.modelcopy.source.feature 
+							org.muml.udbm.feature,\
+							org.muml.udbm.source.feature,\
+							org.muml.graphviz.feature,\
+							org.muml.graphviz.source.feature,\
+							org.muml.modelcopy.feature,\
+							org.muml.modelcopy.source.feature 
 category.id.thirdparty = Third Party Dependencies
-category.members.thirdparty = 	de.uni_paderborn.fujaba.muml.storydiagrams.feature, de.uni_paderborn.fujaba.muml.storydiagrams.source.feature,\
-								de.uni_paderborn.fujaba.muml.allocation.ext.dependency.aopalliance.feature,\
-								de.uni_paderborn.fujaba.muml.allocation.ext.dependency.guava.feature,\
-								de.uni_paderborn.fujaba.muml.allocation.ext.dependency.guice.feature,\
-								de.uni_paderborn.fujaba.muml.allocation.ext.dependency.guice.multibindings.feature,\
-								de.uni_paderborn.fujaba.muml.allocation.ext.dependency.javax.inject.feature,\
-								de.uni_paderborn.fujaba.muml.allocation.ext.dependency.opt4j.feature,\
-								de.uni_paderborn.fujaba.muml.allocation.ext.dependency.sat4j.core.feature,\
-								de.uni_paderborn.fujaba.muml.allocation.ext.dependency.sat4j.pb.feature,\
-								de.uni_paderborn.fujaba.muml.ontology.ext.dependency.owlapi.feature,\
-								de.uni_paderborn.fujaba.muml.ontology.ext.dependency.unitontology.feature
+category.members.thirdparty = 	org.muml.storydiagram.feature,\
+								org.muml.storydiagram.source.feature,\
+								org.muml.external.aopalliance.feature,\
+								org.muml.external.guava.feature,\
+								org.muml.external.guice.feature,\
+								org.muml.external.guice.multibindings.feature,\
+								org.muml.external.javax.inject.feature,\
+								org.muml.external.opt4j.feature,\
+								org.muml.external.sat4j.core.feature,\
+								org.muml.external.sat4j.pb.feature,\
+								org.muml.external.owlapi.feature,\
+								org.muml.external.unitontology.feature
 category.id.examples = MechatronicUML Model Examples
-category.members.examples = de.uni_paderborn.fujaba.muml.example.blindOvertaking.feature,\
-							de.uni_paderborn.fujaba.muml.example.coordinatingBebots.feature,\
-							de.uni_paderborn.fujaba.muml.example.mini.entryexit.feature,\
-							de.uni_paderborn.fujaba.muml.example.mini.messages.feature,\
-							de.uni_paderborn.fujaba.muml.example.mini.operations.feature,\
-							de.uni_paderborn.fujaba.muml.example.mini.simpleRTSC.feature,\
-							de.uni_paderborn.fujaba.muml.example.mini.syncChannel.feature,\
-							de.uni_paderborn.fujaba.muml.example.railcab.feature,\
-							de.uni_paderborn.fujaba.muml.example.sectionEntry.feature,\
+category.members.examples = org.muml.example.blindOvertaking.feature,\
+							org.muml.example.coordinatingBebots.feature,\
+							org.muml.example.mini.entryexit.feature,\
+							org.muml.example.mini.messages.feature,\
+							org.muml.example.mini.operations.feature,\
+							org.muml.example.mini.simpleRTSC.feature,\
+							org.muml.example.mini.syncChannel.feature,\
+							org.muml.example.railcab.feature,\
+							org.muml.example.sectionEntry.feature,\
 							org.muml.example.BrakeByWire.feature,\
 							org.muml.example.arduinoCarHwPlatform.feature,\
 							org.muml.example.mini.syncSelectorChannel.feature,\
-							de.uni_paderborn.fujaba.muml.coordinationpatternlib.feature,\
+							org.muml.example.coordinationpatternlib.feature,\
 							org.muml.example.rocketLauncher.feature,\
 							org.muml.example.CooperatingBallPlayingRobots.feature,\
 							org.muml.example.blinkingLED.feature
 							
 category.id.sdks = MechatronicUML Model SDKs
 category.members.sdks = org.muml.core.sdk.feature,\
-						de.uni_paderborn.fujaba.muml.pim.sdk.feature,\
-						de.uni_paderborn.uppaal.sdk.feature,\
-						de.uni_paderborn.fujaba.muml.verification.core.sdk.feature,\
-						de.uni_paderborn.fujaba.muml.verification.uppaal.sdk.feature,\
-						de.uni_paderborn.fujaba.muml.pm.sdk.feature,\
-						de.uni_paderborn.fujaba.simulink.source.feature,\
-						de.uni_paderborn.fujaba.muml.model.gen.modelica.sdk.feature,\
-						de.uni_paderborn.fujaba.muml.codegen.c.source.feature,\
-						de.uni_paderborn.fujaba.muml.psm.sdk.feature,\
-						de.uni_paderborn.fujaba.muml.reconfiguration.source.feature,\
-						de.uni_paderborn.fujaba.muml.ontology.source.feature						
+						org.muml.pim.sdk.feature,\
+						org.muml.uppaal.sdk.feature,\
+						org.muml.verification.core.sdk.feature,\
+						org.muml.uppaal.adapter.sdk.feature,\
+						org.muml.pm.sdk.feature,\
+						org.muml.modelica.adapter.sdk.feature,\
+						org.muml.codegen.c.source.feature,\
+						org.muml.psm.sdk.feature,\
+						org.muml.reconfiguration.source.feature,\
+						org.muml.ontology.source.feature						
