[UpdateSite] re-added examples to example category

--- a/org.muml.releng.site.feature/build.properties
+++ b/org.muml.releng.site.feature/build.properties
@@ -3,7 +3,7 @@ bin.includes = feature.xml,\
                license.html,\
                epl-v10.html
 category.id.muml = MechatronicUML Features
-category.members.muml = orgmuml.core.feature,\
+category.members.muml = org.muml.core.feature,\
 						org.muml.pim.feature,\
 						orm.muml.verification.core.feature,\
 						org.muml.uppaal.adapter.feature,\
@@ -40,21 +40,21 @@ category.members.thirdparty = 	org.muml.storydiagram.feature,\
 								org.muml.external.owlapi.feature,\
 								org.muml.external.unitontology.feature
 category.id.examples = MechatronicUML Model Examples
-category.members.examples = org.muml.example.blindOvertaking.feature,\
-							org.muml.example.coordinatingBebots.feature,\
+category.members.examples = org.muml.example.blindovertaking.feature,\
+							org.muml.example.coordinatingbebots.feature,\
 							org.muml.example.mini.entryexit.feature,\
 							org.muml.example.mini.messages.feature,\
 							org.muml.example.mini.operations.feature,\
-							org.muml.example.mini.simpleRTSC.feature,\
-							org.muml.example.mini.syncChannel.feature,\
+							org.muml.example.mini.simplertsc.feature,\
+							org.muml.example.mini.syncchannel.feature,\
 							org.muml.example.railcab.feature,\
-							org.muml.example.sectionEntry.feature,\
-							org.muml.example.BrakeByWire.feature,\
-							org.muml.example.arduinoCarHwPlatform.feature,\
-							org.muml.example.mini.syncSelectorChannel.feature,\
+							org.muml.example.sectionentry.feature,\
+							org.muml.example.brakebywire.feature,\
+							org.muml.example.arduinocarhwplatform.feature,\
+							org.muml.example.mini.syncselectorchannel.feature,\
 							org.muml.example.coordinationpatternlib.feature,\
 							org.muml.example.rocketLauncher.feature,\
-							org.muml.example.CooperatingBallPlayingRobots.feature,\
+							org.muml.example.cooperatingballplayingRobots.feature,\
 							org.muml.example.blinkingLED.feature
 							
 category.id.sdks = MechatronicUML Model SDKs
