[UpdateSite] re-added categories

--- a/org.muml.releng.site.feature/build.properties
+++ b/org.muml.releng.site.feature/build.properties
@@ -5,7 +5,7 @@ bin.includes = feature.xml,\
 category.id.muml = MechatronicUML Features
 category.members.muml = org.muml.core.feature,\
 						org.muml.pim.feature,\
-						orm.muml.verification.core.feature,\
+						org.muml.verification.core.feature,\
 						org.muml.uppaal.adapter.feature,\
 						org.muml.modelica.adapter.feature,\
 						org.muml.codegen.c.feature,\
@@ -25,7 +25,8 @@ category.members.utility = 	org.muml.uppaal.feature,\
 							org.muml.graphviz.feature,\
 							org.muml.graphviz.source.feature,\
 							org.muml.modelcopy.feature,\
-							org.muml.modelcopy.source.feature 
+							org.muml.modelcopy.source.feature,\
+							org.muml.ape.ecoure.feature 
 category.id.thirdparty = Third Party Dependencies
 category.members.thirdparty = 	org.muml.storydiagram.feature,\
 								org.muml.storydiagram.source.feature,\
