[Update-Site] added APE Ecore to Utility Category

--- a/org.muml.releng.site.feature/build.properties
+++ b/org.muml.releng.site.feature/build.properties
@@ -1,7 +1,8 @@
 bin.includes = feature.xml,\
                feature.properties,\
                license.html,\
-               epl-v10.html
+               epl-v10.html,\
+               build.properties
 category.id.muml = MechatronicUML Features
 category.members.muml = org.muml.core.feature,\
 						org.muml.pim.feature,\
@@ -15,18 +16,18 @@ category.members.muml = org.muml.core.feature,\
 						org.muml.ontology.feature					
 category.id.utility = Utility Features
 category.members.utility = 	org.muml.uppaal.feature,\
-							org.eclipse.emf.ecore.improved.feature,\
+							org.muml.ape.ecore.feature,\
 							org.muml.ape.feature,\
 							org.muml.ape.migrator.feature,\
 							org.muml.ape.sdk.feature,\
-							org.muml.emm.feature, org.muml.emm.source.feature,\
+							org.muml.emm.feature,\
+							org.muml.emm.source.feature,\
 							org.muml.udbm.feature,\
 							org.muml.udbm.source.feature,\
 							org.muml.graphviz.feature,\
 							org.muml.graphviz.source.feature,\
 							org.muml.modelcopy.feature,\
-							org.muml.modelcopy.source.feature,\
-							org.muml.ape.ecoure.feature 
+							org.muml.modelcopy.source.feature
 category.id.thirdparty = Third Party Dependencies
 category.members.thirdparty = 	org.muml.storydiagram.feature,\
 								org.muml.storydiagram.source.feature,\
