[UpdateSite] fixed categories of examples

--- a/org.muml.releng.site.feature/build.properties
+++ b/org.muml.releng.site.feature/build.properties
@@ -55,9 +55,9 @@ category.members.examples = org.muml.example.blindovertaking.feature,\
 							org.muml.example.arduinocarhwplatform.feature,\
 							org.muml.example.mini.syncselectorchannel.feature,\
 							org.muml.example.coordinationpatternlib.feature,\
-							org.muml.example.rocketLauncher.feature,\
-							org.muml.example.cooperatingballplayingRobots.feature,\
-							org.muml.example.blinkingLED.feature
+							org.muml.example.rocketlauncher.feature,\
+							org.muml.example.cooperatingballplayingrobots.feature,\
+							org.muml.example.blinkingled.feature
 							
 category.id.sdks = MechatronicUML Model SDKs
 category.members.sdks = org.muml.core.sdk.feature,\
