--- a/org.muml.releng.site.feature/build.properties
+++ b/org.muml.releng.site.feature/build.properties
@@ -1,73 +1,13 @@
-bin.includes = feature.xml,\
-               feature.properties,\
-               license.html,\
-               epl-v10.html,\
-               build.properties
-category.id.muml = MechatronicUML Features
-category.members.muml = org.muml.core.feature,\
-						org.muml.pim.feature,\
-						org.muml.verification.core.feature,\
-						org.muml.uppaal.adapter.feature,\
-						org.muml.modelica.adapter.feature,\
-						org.muml.codegen.c.feature,\
-						org.muml.pm.feature,\
-						org.muml.psm.feature,\
-						org.muml.reconfiguration.feature,\
-						org.muml.ontology.feature					
-category.id.utility = Utility Features
-category.members.utility = 	org.muml.uppaal.feature,\
-							org.muml.ape.ecore.feature,\
-							org.muml.ape.feature,\
-							org.muml.ape.migrator.feature,\
-							org.muml.ape.sdk.feature,\
-							org.muml.emm.feature,\
-							org.muml.emm.source.feature,\
-							org.muml.udbm.feature,\
-							org.muml.udbm.source.feature,\
-							org.muml.graphviz.feature,\
-							org.muml.graphviz.source.feature,\
-							org.muml.modelcopy.feature,\
-							org.muml.modelcopy.source.feature
-category.id.thirdparty = Third Party Dependencies
-category.members.thirdparty = 	org.muml.storydiagram.feature,\
-								org.muml.storydiagram.source.feature,\
-								org.muml.external.aopalliance.feature,\
-								org.muml.external.guava.feature,\
-								org.muml.external.guice.feature,\
-								org.muml.external.guice.multibindings.feature,\
-								org.muml.external.javax.inject.feature,\
-								org.muml.external.opt4j.feature,\
-								org.muml.external.sat4j.core.feature,\
-								org.muml.external.sat4j.pb.feature,\
-								org.muml.external.owlapi.feature,\
-								org.muml.external.unitontology.feature
-category.id.examples = MechatronicUML Model Examples
-category.members.examples = org.muml.example.blindovertaking.feature,\
-							org.muml.example.coordinatingbebots.feature,\
-							org.muml.example.mini.entryexit.feature,\
-							org.muml.example.mini.messages.feature,\
-							org.muml.example.mini.operations.feature,\
-							org.muml.example.mini.simplertsc.feature,\
-							org.muml.example.mini.syncchannel.feature,\
-							org.muml.example.railcab.feature,\
-							org.muml.example.sectionentry.feature,\
-							org.muml.example.brakebywire.feature,\
-							org.muml.example.arduinocarhwplatform.feature,\
-							org.muml.example.mini.syncselectorchannel.feature,\
-							org.muml.example.coordinationpatternlib.feature,\
-							org.muml.example.rocketlauncher.feature,\
-							org.muml.example.cooperatingballplayingrobots.feature,\
-							org.muml.example.blinkingled.feature
-							
-category.id.sdks = MechatronicUML Model SDKs
-category.members.sdks = org.muml.core.sdk.feature,\
-						org.muml.pim.sdk.feature,\
-						org.muml.uppaal.sdk.feature,\
-						org.muml.verification.core.sdk.feature,\
-						org.muml.uppaal.adapter.sdk.feature,\
-						org.muml.pm.sdk.feature,\
-						org.muml.modelica.adapter.sdk.feature,\
-						org.muml.codegen.c.source.feature,\
-						org.muml.psm.sdk.feature,\
-						org.muml.reconfiguration.source.feature,\
-						org.muml.ontology.source.feature						
+#
+#Thu Nov 10 15:37:18 CET 2016
+category.id.utility=Utility Features
+category.members.muml=org.muml.core.feature,org.muml.pim.feature,org.muml.verification.core.feature,org.muml.uppaal.adapter.feature,org.muml.modelica.adapter.feature,org.muml.codegen.c.feature,org.muml.pm.feature,org.muml.psm.feature,org.muml.reconfiguration.feature,org.muml.ontology.feature\t\t\t\t\t
+category.id.thirdparty=Third Party Dependencies
+bin.includes=feature.xml,feature.properties,license.html,epl-v10.html,build.properties, feature.properties
+category.members.examples=org.muml.example.blindovertaking.feature,org.muml.example.coordinatingbebots.feature,org.muml.example.mini.entryexit.feature,org.muml.example.mini.messages.feature,org.muml.example.mini.operations.feature,org.muml.example.mini.simplertsc.feature,org.muml.example.mini.syncchannel.feature,org.muml.example.railcab.feature,org.muml.example.sectionentry.feature,org.muml.example.brakebywire.feature,org.muml.example.arduinocarhwplatform.feature,org.muml.example.mini.syncselectorchannel.feature,org.muml.example.coordinationpatternlib.feature,org.muml.example.rocketlauncher.feature,org.muml.example.cooperatingballplayingrobots.feature,org.muml.example.blinkingled.feature
+category.members.thirdparty=org.muml.storydiagram.feature,org.muml.storydiagram.source.feature,org.muml.external.aopalliance.feature,org.muml.external.guava.feature,org.muml.external.guice.feature,org.muml.external.guice.multibindings.feature,org.muml.external.javax.inject.feature,org.muml.external.opt4j.feature,org.muml.external.sat4j.core.feature,org.muml.external.sat4j.pb.feature,org.muml.external.owlapi.feature,org.muml.external.unitontology.feature
+category.members.sdks=org.muml.core.sdk.feature,org.muml.pim.sdk.feature,org.muml.uppaal.sdk.feature,org.muml.verification.core.sdk.feature,org.muml.uppaal.adapter.sdk.feature,org.muml.pm.sdk.feature,org.muml.modelica.adapter.sdk.feature,org.muml.codegen.c.source.feature,org.muml.psm.sdk.feature,org.muml.reconfiguration.source.feature,org.muml.ontology.source.feature\t\t\t\t\t\t
+category.members.utility=org.muml.uppaal.feature,org.muml.ape.ecore.feature,org.muml.ape.feature,org.muml.ape.migrator.feature,org.muml.ape.sdk.feature,org.muml.emm.feature,org.muml.emm.source.feature,org.muml.udbm.feature,org.muml.udbm.source.feature,org.muml.graphviz.feature,org.muml.graphviz.source.feature,org.muml.modelcopy.feature,org.muml.modelcopy.source.feature
+category.id.examples=MechatronicUML Model Examples
+category.id.muml=MechatronicUML Features
+category.id.sdks=MechatronicUML Model SDKs
