--- a/pom.xml
+++ b/pom.xml
@@ -207,5 +207,10 @@
 			<layout>p2</layout>
 			<url>${repobase}/StoryDiagram-Maven/${repopath}org.muml.storydiagram.repository/target/repository</url>
 		</repository>
+	  	  	<repository>
+			<id>OntologyModeling</id>
+			<layout>p2</layout>
+			<url>${repobase}/OntologyModeling-Maven/${repopath}org.muml.ontology.repository/target/repository</url>
+		</repository>
 	</repositories>
 </project>
