--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
 			<url>${repobase}/PlatformSpecificModeling-Maven/${repopath}org.muml.psm.repository/target/repository</url>
 		</repository>
 		<repository>
-			<id>ELOQUENT</id>
+			<id>Eloquent</id>
 			<layout>p2</layout>
 			<url>${repobase}/ELOQUENT-Github-Test/${repopath}org.muml.eloquent.repository/target/repository</url>
 		</repository>
