--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
   </profiles>
   
   <repositories>
+          <repository>
+			<id>eclipse-oxygen</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/releases/oxygen</url>
+        </repository>
 		<repository>
 			<id>eclipse-neon</id>
 			<layout>p2</layout>
