--- a/pom.xml
+++ b/pom.xml
@@ -63,45 +63,22 @@
     </plugins>
   </build>
   
-   <profiles>
+  	<profiles>
         <profile>
-          <id>Local</id> <!-- local build, uses local maven repositories -->
-          <activation>
-            <property>
-              <name>env</name>
-              <value>local</value>
-            </property>
-          </activation>
-          <properties>
-            <repobase>file:///${userpath}</repobase>
-            <repopath></repopath>
-          </properties>
-        </profile>
-        <profile>
-          <id>Jenkins</id> <!-- Jenkins build, only works on Jenkins file system -->
-          <activation>
-            <property>
-              <name>env</name>
-              <value>!local</value>
-            </property>
-          </activation>
-          <properties>
-            <repobase>file:///data/jenkins/jobs</repobase>
-            <repopath>lastSuccessful/archive/</repopath>
-          </properties>
-        </profile>
-        <profile>
-          <id>localJenkins</id> <!-- build this locally, but download other projects from Jenkins-->
+          <id>localJenkins</id> 
           <activation>
             <property>
               <name>env</name>
               <value>localJenkins</value>
             </property>
           </activation>
-          <properties>
-            <repobase>http://muml-build.cs.upb.de/job</repobase>
-            <repopath>lastSuccessfulBuild/artifact/</repopath>
-          </properties>
+		  <repositories>	
+			  <repository>
+				<id>UpdateSite</id>
+				<layout>p2</layout>
+				<url>https://muml-build.cs.upb.de/job/UpdateSite-Maven/lastSuccessfulBuild/artifact/org.muml.releng.site.repository/target/repository</url>
+			</repository>
+		</repositories>		  
         </profile>
   </profiles>
   
@@ -112,120 +89,14 @@
 			<url>http://download.eclipse.org/releases/oxygen</url>
         </repository>
 		<repository>
-			<id>eclipse-neon</id>
+			<id>gmf-tooling</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/neon</url>
+			<url>http://download.eclipse.org/modeling/gmp/gmf-tooling/updates/releases/</url>
 		</repository>
 		<repository>
-			<id>eclipse-updates</id>
+			<id>xtend</id>
 			<layout>p2</layout>
-			<url>http://download.eclipse.org/eclipse/updates/4.6</url>
-		</repository>
-		<repository>
-			<id>ImplicitCopy</id>
-			<layout>p2</layout>
-			<url>${repobase}/ImplicitCopy-Maven/${repopath}org.muml.implicitcopy.repository/target/repository</url>
-		</repository>
-		<repository>
-			<id>ModelMigration</id>
-			<layout>p2</layout>
-			<url>${repobase}/ModelMigration-Maven/${repopath}org.muml.emm.repository/target/repository</url>
-		</repository>
-		<repository>
-			<id>APE</id>
-			<layout>p2</layout>
-			<url>${repobase}/APE-Maven/${repopath}org.muml.ape.repository/target/repository</url>
-		</repository>
-        <repository>
-			<id>Core</id>
-			<layout>p2</layout>
-			<url>${repobase}/Core-Maven/${repopath}org.muml.core.repository/target/repository</url>
-		</repository>
-		<repository>
-			<id>PIM</id>
-			<layout>p2</layout>
-			<url>${repobase}/PlatformIndependentModeling-Maven/${repopath}org.muml.pim.repository/target/repository</url>
-		</repository>
-		<repository>
-			<id>PM</id>
-			<layout>p2</layout>
-			<url>${repobase}/PlatformModeling-Maven/${repopath}org.muml.pm.repository/target/repository</url>
-		</repository>
-	    <repository>
-			<id>PSM</id>
-			<layout>p2</layout>
-			<url>${repobase}/PlatformSpecificModeling-Maven/${repopath}org.muml.psm.repository/target/repository</url>
-		</repository>
-		<repository>
-			<id>Eloquent</id>
-			<layout>p2</layout>
-			<url>${repobase}/ELOQUENT-Github/${repopath}/plugins/org.muml.eloquent.repository/target/repository</url>
-		</repository>
-				<repository>
-			<id>ELOQUENTADAPTER</id>
-			<layout>p2</layout>
-			<url>${repobase}/ELOQUENT-Adapter-Maven/${repopath}org.muml.eloquent.adapter.repository/target/repository</url>
-		</repository>
-	
-		<repository>
-			<id>ExternalDependencies</id>
-			<layout>p2</layout>
-			<url>${repobase}/ExternalDependencies-Maven/${repopath}org.muml.external.repository/target/repository</url>
-		</repository>
-	  		<repository>
-			<id>Example</id>
-			<layout>p2</layout>
-			<url>${repobase}/Example-Maven/${repopath}org.muml.example.repository/target/repository</url>
-		</repository>
-	  	<repository>
-			<id>Modelica</id>
-			<layout>p2</layout>
-			<url>${repobase}/ModelicaAdapterFeature-Maven/${repopath}org.muml.modelica.repository/target/repository</url>
-		</repository>
-	  	<repository>
-			<id>Uppaal</id>
-			<layout>p2</layout>
-			<url>${repobase}/Uppaal-Maven/${repopath}org.muml.uppaal.repository/target/repository</url>
-		</repository>
-	  	<repository>
-			<id>UppaalAdapter</id>
-			<layout>p2</layout>
-			<url>${repobase}/UppaalAdapter-Maven/${repopath}org.muml.uppaal.adapter.repository/target/repository</url>
-		</repository>
-	  	<repository>
-			<id>Codegen_C</id>
-			<layout>p2</layout>
-			<url>${repobase}/Codegen_C-Maven/${repopath}org.muml.codegen.c.repository/target/repository</url>
-		</repository>
-	  	 <repository>
-			<id>VerificationCore</id>
-			<layout>p2</layout>
-			<url>${repobase}/VerificationCore-Maven/${repopath}org.muml.verification.core.repository/target/repository</url>
-		</repository>
-	  	<repository>
-			<id>UDBM</id>
-			<layout>p2</layout>
-			<url>${repobase}/UDBM-Maven/${repopath}org.muml.udbm.repository/target/repository</url>
-		</repository>
-	  	<repository>
-			<id>GraphvizAdapter</id>
-			<layout>p2</layout>
-			<url>${repobase}/GraphvizAdapter-Maven/${repopath}org.muml.graphviz.repository/target/repository</url>
-		</repository>
-	  	<repository>
-			<id>ReconfigurationModeling</id>
-			<layout>p2</layout>
-			<url>${repobase}/ReconfigurationModeling-Maven/${repopath}org.muml.reconfiguration.repository/target/repository</url>
-		</repository>	
-	  	<repository>
-			<id>StoryDiagram</id>
-			<layout>p2</layout>
-			<url>${repobase}/StoryDiagram-Maven/${repopath}org.muml.storydiagram.repository/target/repository</url>
-		</repository>
-	  	  	<repository>
-			<id>OntologyModeling</id>
-			<layout>p2</layout>
-			<url>${repobase}/OntologyModeling-Maven/${repopath}org.muml.ontology.repository/target/repository</url>
-		</repository>
+			<url>http://download.eclipse.org/modeling/tmf/updates/</url>
+        </repository>
 	</repositories>
 </project>
