--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
 		 </environments>
 		</configuration>
 	   </plugin>
+       <plugin>
+         <groupId>org.eclipse.tycho</groupId>
+         <artifactId>tycho-p2-repository-plugin</artifactId>
+         <version>${tycho-version}</version>
+         <configuration>
+            <includeAllDependencies>true</includeAllDependencies>
+         </configuration>
+      </plugin> 
     </plugins>
   </build>
   
